Update ArmsAction for new Interventions and user logging.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@2973 553898ca-32d5-487a-af8b-6cf4ca579ab4